[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperqueue"
version = "0.1.0"
description = "paperqueue stuff."
authors = [{name ="Harry Bevins", email ="htjb2@cam.ac.uk"}]

[project.scripts]
paperqueue = "paperqueue.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["paperqueue*"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ['E,', 'F,', 'W,', 'I,', 'D,', 'UP,', 'ANN']

[tool.ruff.lint.pydocstyle]
convention = "google"
